去掉本地账号密码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.profiles.active=dev
+
+#bihuHost=https://be02.bihu.com/bihube-pc
+#
+#phone=
+#
+#password=
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/bihu?useSSL=false&useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#
+## JavaMailSender ÓÊ¼ş·¢ËÍµÄÅäÖÃ
+##spring.mail.host=smtp.qq.com
+##spring.mail.username=
+##spring.mail.password=
+##spring.mail.properties.mail.smtp.auth=true
+##spring.mail.properties.mail.smtp.starttls.enable=true
+##spring.mail.properties.mail.smtp.starttls.required=true
+#
+#mailTo=
